Add initial website structure and functionality for 100SMILES Dental Care
- Created index.html with homepage content, navigation, and footer.
- Implemented online booking form in online-booking.html with validation.
- Developed our-team.html to showcase dental team members and their expertise.
- Established services.html to detail available dental services.
- Added template.html for consistent layout across pages.
- Included JavaScript for navigation toggle and booking form validation.
- Integrated CSS for styling and responsive design.

--- a/a2/template.html
+++ b/a2/template.html
@@ -26,7 +26,7 @@
         <div class="nav-inner">
             <a href="services.html">Services</a>
             <a href="free-dental-checkup.html">Free Dental Check-up</a>
-            <a href="annual-check-up.html">Annual Dental Check Up</a>
+            <a href="annual-check-up.html">Annual Dental Check-up</a>
             <a href="our-team.html">Our Team</a>
             <a href="articles.html">Articles</a>
             <a href="online-booking.html">Online Booking</a>
