--- a/a1/articles.html
+++ b/a1/articles.html
@@ -18,7 +18,7 @@
 <nav class="site-nav" aria-label="Primary">
   <div class="nav-inner">
       <a href="services.html">Services</a>
-      <a href="annual-check-up.html">Annual Dental Check Up</a>
+      <a href="annual-check-up.html">Annual Dental Check-up</a>
       <a href="our-team.html">Our Team</a>
       <a href="articles.html">Articles</a>
     
