Refactor code structure for improved readability and maintainability

--- a/a2/index.html
+++ b/a2/index.html
@@ -22,8 +22,6 @@
     </header>
 
     <nav class="site-nav" aria-label="Primary">
-
-
         <div class="nav-inner">
             <a href="services.html">Services</a>
             <a href="free-dental-checkup.html">Free Dental Check-up</a>
@@ -137,6 +135,9 @@
     </footer>
     <script src="js/nav.js"></script>
 
+  <script src="js/nav.js
+"></script>
 </body>
+
 
 </html>
