--- a/a2/our-team.html
+++ b/a2/our-team.html
@@ -16,6 +16,9 @@
         <h1>
             <a href="index.html">100SMILES Dental Care</a>
         </h1>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
     </header>
 
     <nav class="site-nav" aria-label="Primary">
@@ -61,7 +64,7 @@
                 <!-- Emily – new pediatric dentist -->
                 <article class="member">
                     <div class="photo">
-                        <img src="images/staff/staff-dr-emily-carter.jpeg" alt="Dr. Emily Carter — Pediatric Dentist">
+                        <img src="images/staff/staff-dr-emily-carter.jpg" alt="Dr. Emily Carter — Pediatric Dentist">
                     </div>
                     <div class="info">
                         <p class="who"><strong>Dr. Emily Carter</strong><span class="role">Pediatric Dentist</span></p>
@@ -160,6 +163,9 @@
             </div>
         </div>
     </footer>
+  <script src="js/nav.js
+"></script>
 </body>
+
 
 </html>
