--- a/a2/annual-check-up.html
+++ b/a2/annual-check-up.html
@@ -16,6 +16,9 @@
         <h1>
             <a href="index.html">100SMILES Dental Care</a>
         </h1>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
     </header>
 
     <nav class="site-nav" aria-label="Primary">
@@ -166,6 +169,18 @@
             </div>
         </div>
     </footer>
+  <script src="js/nav.js
+"></script>
+
+  <script src="js/nav.js
+"></script>
 </body>
+
+
+
+
+
+
+
 
 </html>
