--- a/a2/free-dental-checkup.html
+++ b/a2/free-dental-checkup.html
@@ -16,6 +16,9 @@
         <h1>
             <a href="index.html">100SMILES Dental Care</a>
         </h1>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
     </header>
 
     <nav class="site-nav" aria-label="Primary">
@@ -29,7 +32,7 @@
         </div>
     </nav>
 
-    <main>
+    <main id="free-dental-checkup">
         <section class="ac-wrap" aria-labelledby="free-checkup-title">
             <!-- Hero -->
             <div class="hero">
@@ -46,7 +49,7 @@
                 </article>
 
                 <figure class="hero-figure">
-                    <img src="images/articles-installing-dental-implants.jpg"
+                    <img src="images/free-dental-checkup-man.jpg"
                         alt="Dentist examining a patient's teeth during a free dental check-up">
                 </figure>
             </div>
@@ -79,7 +82,8 @@
                 <div class="grid grid--3" style="margin-top:1rem">
                     <article class="card">
                         <h4>Call Us</h4>
-                        <p>Phone our clinic on <strong>07 1327 5599</strong> and let us know you’d like to reserve a
+                        <p>Phone our clinic on <a href="tel:+61750005599"><strong>07 1327 5599</strong></a> and let us
+                            know you’d like to reserve a
                             spot for the
                             Free Dental Check-Up Day. We’ll help you find a suitable time.</p>
                     </article>
@@ -155,6 +159,10 @@
                             children’s dental
                             care. Our team is happy to explain things in everyday language.</p>
                     </article>
+                    <article class="card image-card">
+                        <img src="images/free-dental-checkup-women.jpg"
+                            alt="Dentist performing a free dental check-up for a patient">
+                    </article>
                 </div>
 
                 <p style="margin-top:0.75rem;font-size:.9rem;">
@@ -218,6 +226,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/nav.js"></script>
 </body>
+
 
 </html>
