--- a/a2/online-booking.html
+++ b/a2/online-booking.html
@@ -16,6 +16,9 @@
         <h1>
             <a href="index.html">100SMILES Dental Care</a>
         </h1>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
     </header>
 
     <nav class="site-nav" aria-label="Primary">
@@ -151,7 +154,7 @@
                     <div class="error-message"></div>
                 </div>
 
-                <button type="submit" class="btn">Submit Booking Request</button>
+                <button type="submit" class="btn white">Submit Booking Request</button>
 
                 <div id="booking-success" class="booking-success" role="status" aria-live="polite">
                     Thank you for your request. We’ve received your details and will contact you shortly to confirm an
@@ -181,6 +184,9 @@
     </footer>
     <script src="js/booking-request.js"></script>
 
+  <script src="js/nav.js
+"></script>
 </body>
+
 
 </html>
