--- a/a2/services.html
+++ b/a2/services.html
@@ -16,6 +16,9 @@
         <h1>
             <a href="index.html">100SMILES Dental Care</a>
         </h1>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
     </header>
 
     <nav class="site-nav" aria-label="Primary">
@@ -26,7 +29,6 @@
             <a href="our-team.html">Our Team</a>
             <a href="articles.html">Articles</a>
             <a href="online-booking.html">Online Booking</a>
-
         </div>
     </nav>
 
@@ -101,49 +103,93 @@
             </div>
 
             <!-- New Technologies -->
+
             <div class="band" style="margin-top:2.5rem">
                 <h3>Our New Dental Technologies</h3>
                 <p>To deliver the best possible care, 100SMILES Dental Care has recently integrated several modern
                     technologies into our practice.</p>
 
                 <div class="grid grid--3" style="margin-top:1rem">
-                    <article class="card">
-                        <h4>Digital X-Rays</h4>
-                        <p>High-resolution digital X-rays with significantly reduced radiation, helping us diagnose
-                            issues more quickly and accurately.</p>
+
+                    <!-- Digital X-Rays -->
+                    <article class="tech-card">
+                        <div class="tech-photo">
+                            <img src="images/services-x-ray.jpg" alt="Digital dental X-rays">
+                        </div>
+                        <div class="tech-info">
+                            <h4>Digital X-Rays</h4>
+                            <p>High-resolution digital X-rays with significantly reduced radiation, helping us diagnose
+                                issues more quickly and accurately.</p>
+                        </div>
                     </article>
 
-                    <article class="card">
-                        <h4>Intraoral Cameras</h4>
-                        <p>Small cameras that capture detailed images inside your mouth, so we can detect problems early
-                            and show you what we see.</p>
+                    <!-- Intraoral Cameras -->
+                    <article class="tech-card">
+                        <div class="tech-photo">
+                            <img src="images/services-teeth-blood-vessel.jpg"
+                                alt="Intraoral cameras for dental imaging">
+                        </div>
+                        <div class="tech-info">
+                            <h4>Intraoral Cameras</h4>
+                            <p>Small cameras that capture detailed images inside your mouth, so we can detect problems
+                                early and show you what we see.</p>
+                        </div>
                     </article>
 
-                    <article class="card">
-                        <h4>Laser Dentistry</h4>
-                        <p>Gentle laser techniques for selected treatments, supporting minimally invasive care with less
-                            discomfort and faster healing.</p>
+                    <!-- Laser Dentistry -->
+                    <article class="tech-card">
+                        <div class="tech-photo">
+                            <img src="images/services-older-man-getting-treatment.jpg" alt="Laser dentistry treatments">
+                        </div>
+                        <div class="tech-info">
+                            <h4>Laser Dentistry</h4>
+                            <p>Gentle laser techniques for selected treatments, supporting minimally invasive care with
+                                less discomfort and faster healing.</p>
+                        </div>
                     </article>
 
-                    <article class="card">
-                        <h4>CAD/CAM Restorations</h4>
-                        <p>Computer-aided design and manufacturing that allows us to create precise crowns, bridges and
-                            veneers, often in a single visit.</p>
+                    <!-- CAD/CAM Restorations -->
+                    <article class="tech-card">
+                        <div class="tech-photo">
+                            <img src="images/services-fake-teeth.jpg" alt="CAD/CAM dental restorations">
+                        </div>
+                        <div class="tech-info">
+                            <h4>CAD/CAM Restorations</h4>
+                            <p>Computer-aided design and manufacturing that allows us to create precise crowns, bridges
+                                and veneers, often in a single visit.</p>
+                        </div>
                     </article>
 
-                    <article class="card">
-                        <h4>3D Printing</h4>
-                        <p>3D-printed models, guides and custom appliances that improve treatment planning and the fit
-                            of your dental devices.</p>
+                    <!-- 3D Printing -->
+                    <article class="tech-card">
+                        <div class="tech-photo">
+                            <img src="images/services-theeth-printer.jpg"
+                                alt="3D printing for dental models and guides">
+                        </div>
+                        <div class="tech-info">
+                            <h4>3D Printing</h4>
+                            <p>3D-printed models, guides and custom appliances that improve treatment planning and
+                                enhance the fit of your dental devices.</p>
+                        </div>
                     </article>
 
-                    <article class="card">
-                        <h4>Teledentistry</h4>
-                        <p>Virtual consultations for suitable concerns, letting you receive professional advice and
-                            follow-up care from home.</p>
+                    <!-- Teledentistry -->
+                    <article class="tech-card">
+                        <div class="tech-photo">
+                            <img src="images/services-teeth-scan.jpg" alt="Teledentistry consultations">
+                        </div>
+                        <div class="tech-info">
+                            <h4>Teledentistry</h4>
+                            <p>Virtual consultations for suitable dental concerns, allowing you to receive advice and
+                                follow-up care from the comfort of home.</p>
+                        </div>
                     </article>
+
                 </div>
             </div>
+
+
+
         </section>
     </main>
 
@@ -164,6 +210,9 @@
             </div>
         </div>
     </footer>
+  <script src="js/nav.js
+"></script>
 </body>
+
 
 </html>
